--- a/style.css
+++ b/style.css
@@ -63,14 +63,24 @@
     height: 95%;
     display: flex;
     align-items: center;
-    flex: 1 1 0%;
+    justify-content: space-between;
+    overflow: hidden;
 }
 
 .hero-text {
-  border: 1px solid blue;
-  /* max-width: 30vw; */
+    border: 1px solid blue;
+    width: 50%;
+
 }
 
 .hero-image {
-    max-width: 50vw;
+    max-height: 100%;
+}
+
+.hero-image > img {
+    width: 100%;    
+    height: 50%;
+    display: block;
+    margin: auto 0;
+
 }
