--- a/style.css
+++ b/style.css
@@ -94,7 +94,6 @@
     padding: 7px 30px;
     border-radius: 5px;
     text-decoration: none;
-    text-align: center;
     font-family: 'Lato', sans-serif;
     color: var(--secondary-text);
     background-color: var(--button-color);
@@ -109,6 +108,46 @@
 .hero-image > img {
     max-width: 100%;
     height: auto;
-    /* display: block;
-    margin: auto 0; */
+}
+
+.about {
+    width: 100vw;
+    margin-top: 30px;
+    padding-bottom: 50px;
+}
+
+.about-container {
+    max-width: 70%;
+    margin: 0 auto;
+}
+
+.about-head > h2 {
+    color: var(--background-color);
+    text-align: center;
+    font-size: 36px;
+    font-family: 'Lato', sans-serif;
+    font-weight: 800;
+}
+
+.about-content {
+    display: flex;
+    align-items: center;
+    justify-content: center;
+    margin-top: 40px;
+}
+
+.about-content > .content {
+    margin-left: 45px;
+}
+
+.about-content > .content > img {
+    border: 5px solid var(--button-color);
+    border-radius: 10px;
+}
+
+.about-content > .content > h3 {
+    font-size: 18px;
+    font-family: 'Lato', sans-serif;
+    text-align: center;
+    margin-top: 10px;
 }
